// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiToken is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--gray euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color euiColorVis0 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--euiColorVis0 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color euiColorVis1 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--euiColorVis1 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color euiColorVis2 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--euiColorVis2 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color euiColorVis3 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--euiColorVis3 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color euiColorVis4 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--euiColorVis4 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color euiColorVis5 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--euiColorVis5 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color euiColorVis6 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--euiColorVis6 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color euiColorVis7 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--euiColorVis7 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color euiColorVis8 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--euiColorVis8 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color euiColorVis9 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--euiColorVis9 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color gray is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--gray euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props fill dark is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--gray euiToken--dark euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props fill light is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--gray euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props fill none is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--gray euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props shape circle is rendered 1`] = `
<div
  class="euiToken euiToken--circle euiToken--euiColorVis1 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props shape rectangle is rendered 1`] = `
<div
  class="euiToken euiToken--rectangle euiToken--euiColorVis1 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props shape square is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--euiColorVis1 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props size l is rendered 1`] = `
<div
  class="euiToken euiToken--circle euiToken--euiColorVis1 euiToken--light euiToken--large"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--large euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props size m is rendered 1`] = `
<div
  class="euiToken euiToken--circle euiToken--euiColorVis1 euiToken--light euiToken--medium"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props size s is rendered 1`] = `
<div
  class="euiToken euiToken--circle euiToken--euiColorVis1 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props size xs is rendered 1`] = `
<div
  class="euiToken euiToken--circle euiToken--euiColorVis1 euiToken--light euiToken--xsmall"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;
